<resources>
    <string name="app_name">Task Manager</string>
    <string name="navBarTitle">navBarTitle</string>
    <string name="requestId">124496619936-ie3g2e4lr872niad1s6mvh62710v6gvt.apps.googleusercontent.com</string>
    <string name="RC_SIGN_IN">9001</string>
    <string name="UserSharedPrefs">UserSharedPrefs</string>
    <string name="DisplayName">DisplayName</string>
    <string name="BemVindo">Bem-Vindo</string>
    <string name="IdTokenGoogle">IdTokenGoogle</string>
    <string name="IdTokenFirebase">IdTokenFirebase</string>
    <string name="content_description_EmailLogin">Email</string>
    <string name="content_description_SenhaLogin">Senha</string>
    <string name="contentAppLoginBackGround">contentAppLoginBackGround</string>
    <string name="contentAppHomeBackGround">contentAppHomeBackGround</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LogoIMG">LogoIMG</string>
    <string name="imageViewVisualizarContentDesc">imageViewVisualizarContentDesc</string>
    <string name="imageViewIncluirNovoContentDescription">imageViewIncluirNovo</string>
    <string name="imageViewPerfilContentDescription">imageViewPerfil</string>
    <string name="imageViewConfigContentDescription">imageViewConfig</string>
    <string name="SairTxt">SAIR</string>
    <string name="SairTxtContentDescription">SAIRTXT</string>
    <string name="imageViewTarefaContentDescription">imageViewTarefa</string>
    <string name="visRowImageViewContentDescription">visRowImageViewContentDescription</string>
    <string name="content_description_TituloTarefa">Titulo</string>
    <string name="content_description_AliasTarefa">Apelido</string>
    <string name="content_description_DescricaoTarefa">Descrição</string>
    <string name="content_description_Notificar">Notificar</string>
    <string name="content_description_ValorNota">Valor da nota</string>
    <string name="content_description_DataEntrega">Data de Entrega</string>
    <string name="content_description_IconeTarefa">Icone</string>
    <string name="content_description_Button_Salvar_Tarefa">SALVAR</string>
    <string name="ButtonSalvarTarefaText">SALVAR</string>
    <string name="ButtonUpdateTarefaText">ATUALIZAR</string>
    <string name="Action">Action</string>
    <string name="IdTarefa">IdTarefa</string>
    <string name="labelDeleteSnackBar">Registro deletado com sucesso</string>

    <string-array name="iconeArr">
        <item>Prova</item>
        <item>Trabalho</item>
        <item>Apresentação</item>
        <item>Extra</item>
        <item>Outros</item>
    </string-array>
    <string-array name="notificacaoArr">
        <item>No dia</item>
        <item>Dias antes</item>
        <item>Horas</item>
    </string-array>
    <string-array name="notificacaoRepetirArr">
        <item>Semanalmente</item>
        <item>Diariamente</item>
        <item>De hora em hora</item>
    </string-array>
</resources>