<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CriarActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewCreateMaster"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:padding="10dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="@+id/InputAliasTarefa"
                    app:layout_constraintStart_toEndOf="@+id/InputAliasTarefa">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView4"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="18dp"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardView3"
                                android:layout_width="80dp"
                                android:layout_height="0dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="60dp"
                                app:cardElevation="5dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageView
                                    android:id="@+id/ImageViewIconeCriarTarefa"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:adjustViewBounds="true"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/physics">

                                </ImageView>

                            </androidx.cardview.widget.CardView>


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InputTituloTarefa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_description_TituloTarefa"
                        app:counterEnabled="true"
                        app:counterMaxLength="@integer/MaxLengthTituloTarefa"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/cardView4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="@integer/MaxLengthTituloTarefa" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InputAliasTarefa"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_description_AliasTarefa"
                        app:counterEnabled="true"
                        app:counterMaxLength="@integer/MaxLengthAliasTarefa"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/InputDescricaoTarefa">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="@integer/MaxLengthAliasTarefa"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InputDescricaoTarefa"
                        android:layout_width="409dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_description_DescricaoTarefa"
                        app:counterEnabled="true"
                        app:counterMaxLength="@integer/MaxLengthDescricaoTarefa"
                        app:errorEnabled="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/InputTituloTarefa">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="@integer/MaxLengthDescricaoTarefa" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InputDataEntregaTarefa"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_description_DataEntrega"
                        app:errorEnabled="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/InputAliasTarefa"
                        app:startIconDrawable="@drawable/twotone_insert_invitation_black_18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/InputDataEntregaTextField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/InputValorNota"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:hint="@string/content_description_ValorNota"
                        app:counterEnabled="true"
                        app:counterMaxLength="@integer/MaxLengthValorNotaTarefa"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/InputDescricaoTarefa">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLength="@integer/MaxLengthValorNotaTarefa"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchNotificar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="65dp"
                        android:layout_marginRight="65dp"
                        android:layout_marginBottom="32dp"
                        android:checked="true"
                        android:text="Notificar"
                        app:layout_constraintBottom_toBottomOf="@+id/InputDataEntregaTarefa"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CardViewNotificar"
                        android:layout_width="409dp"
                        android:layout_height="300dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/InputDataEntregaTarefa">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintBottom_toTopOf="@+id/dataNotificacaoInputLayout"
                            app:layout_constraintTop_toTopOf="@+id/dataNotificacaoInputLayout">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="21dp"
                                android:layout_marginLeft="21dp"
                                android:layout_marginTop="16dp"
                                android:text="Frequencia"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputLayoutFrequencia"
                                android:layout_width="88dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="21dp"
                                android:layout_marginLeft="21dp"
                                android:layout_marginTop="7dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true" />
                            </com.google.android.material.textfield.TextInputLayout>


                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="21dp"
                                android:layout_marginLeft="21dp"
                                android:layout_marginTop="19dp"
                                android:text="Inicio"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFrequencia" />

                            <Spinner
                                android:id="@+id/spinnerNotificacao"
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="44dp"
                                android:layout_marginLeft="44dp"
                                android:layout_marginTop="74dp"
                                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutFrequencia"
                                app:layout_constraintStart_toEndOf="@+id/textInputLayoutFrequencia"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Spinner
                                android:id="@+id/spinnerRepetir"
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="33dp"
                                android:layout_marginLeft="33dp"
                                app:layout_constraintBottom_toBottomOf="@+id/switchRepetir"
                                app:layout_constraintStart_toEndOf="@+id/switchRepetir" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchRepetir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="21dp"
                                android:layout_marginLeft="21dp"
                                android:layout_marginTop="23dp"
                                android:text="Repetir"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView4" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/SalvarTarefaButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:text="@string/ButtonSalvarTarefaText"
                        app:layout_constraintTop_toBottomOf="@+id/CardViewNotificar" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>